argo-app/Deployment-Poly.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samer-polybot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: samer-polybot
  template:
    metadata:
      labels:
        app: samer-polybot
    spec:
      containers:
        - name: samer-polybot
          image: walaahij/polybot:185_20240724_111811
          ports:
            - containerPort: 8443
