argo-app/service-yolo5.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo5-service            # Name of the service
  labels:
    app: yolo5                   # Labels for the service
spec:
  selector:
    app: yolo5                   # Selector to match the labels of pods to expose
  ports:
    - protocol: TCP
      port: 8443                 # Port exposed by the service
      targetPort: 8443           # Target port on the pods
